# klib

./: CMakeLists.txt
include/: FilterFileNameInformation.h  Lock.h  main.h  version.h
include/public/: kl.h
include/virt/: vmx.h
src/: FilterFileNameInformation.cpp  Lock.cpp  version.cpp
src/virt/: vmx.asm  vmx.cpp
